--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Hello world"
-        android:id="@+id/textView"
+        android:id="@+id/txt1"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
@@ -24,7 +24,7 @@
         android:text="click me"
         android:id="@+id/btnClickMe"
         android:layout_marginTop="32dp"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/txt1"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
