--- a/newsui/src/main/res/layout/activity_main.xml
+++ b/newsui/src/main/res/layout/activity_main.xml
@@ -7,13 +7,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="eu.fiveminutes.newsapp.ui.MainActivity">
+    tools:context="eu.fiveminutes.newsui.MainActivity">
 
-    <Button
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/download"
-        android:id="@+id/btnDownlaod"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:id="@+id/listViewNews"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
