Cleaning code, creating greendao module

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="eu.fiveminutes.newsapp.ui.MainActivity">
+    tools:context="eu.fiveminutes.newsapp.ui.activity.MainActivity">
 
     <ListView
         android:layout_width="wrap_content"
