--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -6,11 +6,7 @@
     tools:context="eu.fiveminutes.newsapp.ui.NewsDetailActivity">
 
     <WebView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/webViewNews"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/webViewNews" />
 </RelativeLayout>
