--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="eu.fiveminutes.newsapp.ui.activity.MainActivity">
 
+    <TextView
+        android:id="@+id/activity_main_error_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:layout_gravity="center" />
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/activity_main_news_swipe"
         android:layout_width="match_parent"
@@ -14,6 +21,7 @@
             android:id="@+id/activity_main_news_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
     </android.support.v4.widget.SwipeRefreshLayout>
 
-</RelativeLayout>
+</FrameLayout>
