--- a/app/src/main/res/layout/news_list_row.xml
+++ b/app/src/main/res/layout/news_list_row.xml
@@ -1,16 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:weightSum="1">
+
+    <ImageView
+        android:id="@+id/activity_main_news_list_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="0.08"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"/>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/txtHeadline"
         android:id="@+id/txtHeadline"
-        android:layout_weight="0.08"
-        android:gravity="center" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="@string/txtHeadline"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/activity_main_news_list_image"
+        android:layout_alignParentTop="true"
+        android:layout_alignBottom="@+id/activity_main_news_list_image"/>
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/activity_main_news_list_snippet"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_below="@+id/txtHeadline"
+        android:layout_toEndOf="@+id/activity_main_news_list_image"
+        android:layout_alignParentStart="true"/>
+
+</RelativeLayout>
