--- a/app/src/main/res/layout/news_list_row.xml
+++ b/app/src/main/res/layout/news_list_row.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:weightSum="1">
+                android:weightSum="1"
+    >
 
     <ImageView
         android:id="@+id/activity_main_news_list_image"
@@ -19,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:gravity="center"
         android:text="@string/txtHeadline"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -34,8 +36,7 @@
         android:id="@+id/activity_main_news_list_snippet"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_margin="10dp"
         android:layout_below="@+id/txtHeadline"
         android:layout_toEndOf="@+id/activity_main_news_list_image"
         android:layout_alignParentStart="true"/>
