--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_main_error_text_size">30sp</dimen>
+    <dimen name="nest_item_list_top_bottom_margin">8dp</dimen>
+    <dimen name="news_item_list_left_right_margin">16dp</dimen>
+    <dimen name="news_item_list_views_margin">10dp</dimen>
+    <dimen name="news_item_list_corners">7dp</dimen>
 
 </resources>
