--- a/app/src/main/res/drawable/news_list_item_shape.xml
+++ b/app/src/main/res/drawable/news_list_item_shape.xml
@@ -4,8 +4,8 @@
     <gradient
 
         android:angle="270"
-        android:endColor="#3b7fba"
-        android:startColor="#7777"/>
+        android:endColor="#7777"
+        android:startColor="#CCCC"/>
     <corners
         android:bottomLeftRadius="@dimen/news_item_list_corners"
         android:bottomRightRadius="@dimen/news_item_list_corners"
