--- a/app/src/main/res/drawable/news_list_item_shape.xml
+++ b/app/src/main/res/drawable/news_list_item_shape.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android">
     android:shape="rectangle">
-    <gradient
 
+    <gradient
         android:angle="270"
         android:endColor="@color/newsListGradientEnd"
         android:startColor="@color/newsListGradientStart"/>
+
     <corners
         android:bottomLeftRadius="@dimen/news_item_list_corners"
         android:bottomRightRadius="@dimen/news_item_list_corners"
