--- a/app/src/main/res/layout/news_list_row.xml
+++ b/app/src/main/res/layout/news_list_row.xml
@@ -45,6 +45,8 @@
             android:id="@+id/activity_main_news_list_snippet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="3"
             android:layout_margin="@dimen/news_item_list_views_margin"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
 
