--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -21,8 +21,17 @@
         <ListView
             android:id="@+id/activity_main_news_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:visibility="gone"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <ProgressBar
+        android:id="@+id/news_list_loading_bar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminate="false"/>
 
 </FrameLayout>
