--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -6,18 +6,18 @@
                 tools:context="eu.fiveminutes.newsapp.ui.activity.NewsDetailActivity">
 
     <WebView
+        android:id="@+id/news_detail_fragment_web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:id="@+id/news_detail_fragment_web_view"/>
+        android:visibility="gone"/>
 
     <ProgressBar
+        android:id="@+id/news_detail_loading_bar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/news_detail_loading_bar"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:indeterminate="false"/>
 
 </RelativeLayout>
