--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:gpb="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -11,13 +12,14 @@
         android:layout_height="match_parent"
         android:visibility="gone"/>
 
-    <ProgressBar
+    <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
         android:id="@+id/news_detail_loading_bar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:indeterminate="false"/>
+        android:indeterminate="false"
+        gpb:type="chrome_floating_circles"/>
 
 </RelativeLayout>
