--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:gpb="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
@@ -26,12 +27,13 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <ProgressBar
+    <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
         android:id="@+id/news_list_loading_bar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:indeterminate="false"/>
+        android:indeterminate="false"
+        gpb:type="chrome_floating_circles"/>
 
 </FrameLayout>
