--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#1d8f27</color>
+    <color name="colorPrimaryDark">#17761f</color>
     <color name="colorAccent">#FF4081</color>
     <color name="newsListGradientEnd">#7777</color>
     <color name="newsListGradientStart">#CCCC</color>
