--- a/app/src/main/res/drawable/news_list_item_shape.xml
+++ b/app/src/main/res/drawable/news_list_item_shape.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
-    android:shape="rectangle">
 
-    <gradient
-        android:angle="270"
-        android:endColor="#ffffff"
-        android:startColor="#ffffff"/>
+    <solid
+        android:color="#ffffff"/>
 
     <corners
         android:bottomLeftRadius="@dimen/news_item_list_corners"
         android:bottomRightRadius="@dimen/news_item_list_corners"
         android:topLeftRadius="@dimen/news_item_list_corners"
         android:topRightRadius="@dimen/news_item_list_corners"/>
-
 </shape>
 
