Adding color to list news divider

--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -25,6 +25,7 @@
             android:id="@+id/activity_main_news_list"
             android:layout_width="match_parent"
             android:dividerHeight="@dimen/news_list_divider_height"
+            android:divider="@color/colorPrimary"
             android:layout_height="match_parent"
             android:visibility="gone"/>
 
